tests/vertical-slice/accept/cross_module_fn_value/helpers.hew
pub fn double(x: i64) -> i64 {
    x * 2
}

pub fn negate(x: i64) -> i64 {
    0 - x
}
