tests/vertical-slice/reject/borrow_type_outside_extern.hew
fn ordinary(value: &i64) -> i64 {
    0
}
